--- a/package.json
+++ b/package.json
@@ -38,9 +38,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.7"
+    "prettier": "^2.7.1"
   }
 }
