--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.15",
     "@mui/x-data-grid": "^5.17.13",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "axios": "^1.2.0",
     "react": "^18.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.1.16",
