--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.0.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
